# pleiades

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN-MAILBOX.md  PLAN.md  README.md  SPEC.md  cliff.toml  deny.toml  devenv.nix  mise.toml  release-plz.toml  release.toml  renovate.json
crates/pleiades-apparent/: Cargo.toml  README.md
crates/pleiades-apparent/data/: nutation-iau1980.csv
crates/pleiades-apparent/src/: aberration.rs  apparent.rs  equatorial.rs  error.rs  lib.rs  lighttime.rs  nutation.rs  parallax.rs  policy.rs  precession.rs  provenance.rs  refraction.rs  sidereal.rs  topocentric.rs
crates/pleiades-apparent/src/aberration/: tests.rs
crates/pleiades-apparent/src/apparent/: tests.rs
crates/pleiades-apparent/src/lighttime/: tests.rs
crates/pleiades-apparent/src/nutation/: tests.rs
crates/pleiades-apparent/src/precession/: tests.rs
crates/pleiades-apparent/src/provenance/: tests.rs
crates/pleiades-apparent/src/refraction/: tests.rs
crates/pleiades-apparent/src/sidereal/: tests.rs
crates/pleiades-apsides/: Cargo.toml  README.md
crates/pleiades-apsides/src/: lib.rs
crates/pleiades-ayanamsa/: Cargo.toml  README.md
crates/pleiades-ayanamsa/src/: catalog.rs  fitted_offset.rs  galactic.rs  lib.rs  lookup.rs  model.rs  precession.rs  se_anchors.rs  tests.rs  thresholds.rs  truestar.rs
crates/pleiades-cli/: Cargo.toml
crates/pleiades-cli/src/: cli.rs  help.rs  main.rs  parse.rs  render.rs
crates/pleiades-cli/src/cli/: tests.rs  (+1 more)
crates/pleiades-compression/: Cargo.toml  README.md
crates/pleiades-compression/src/: artifact.rs  channels.rs  codec.rs  error.rs  format.rs  frame_recombine.rs  lib.rs  tests.rs
crates/pleiades-core/: Cargo.toml  README.md
crates/pleiades-core/src/: api_stability.rs  chart.rs  compatibility.rs  lib.rs  release_profiles.rs
crates/pleiades-data/: Cargo.toml  README.md
crates/pleiades-data/src/: accuracy_baseline.rs  backend.rs  coverage.rs  lib.rs  lookup.rs  regenerate.rs  test_support.rs  tests.rs  thresholds.rs
crates/pleiades-data/tests/: artifact_regen.rs
crates/pleiades-eclipse/: Cargo.toml  README.md
crates/pleiades-eclipse/src/: engine.rs  ephemeris.rs  error.rs  geometry.rs  lib.rs  local.rs  saros.rs  syzygy.rs  types.rs
crates/pleiades-eclipse/tests/: known_eclipses.rs  smoke.rs
crates/pleiades-elp/: Cargo.toml  README.md
crates/pleiades-elp/src/: backend.rs  catalog.rs  evidence.rs  lib.rs  request_policy.rs  series.rs  source.rs  specification.rs  tests.rs
crates/pleiades-events/: Cargo.toml  README.md
crates/pleiades-events/data/: fixstars-catalog.csv
crates/pleiades-events/src/: crossings.rs  ephemeris.rs  error.rs  fixstar.rs  horizontal.rs  lib.rs  magnitude.rs  mean_elements.rs  nod_aps.rs  occult.rs  pheno.rs  rise_trans.rs  root.rs  semidiameter.rs
crates/pleiades-events/tests/: heliocentric.rs  nod_aps.rs  occult_integration.rs  pheno.rs
crates/pleiades-fict/: Cargo.toml  README.md
crates/pleiades-fict/data/: fictitious-elements.csv
crates/pleiades-fict/src/: backend.rs  elements.rs  frame.rs  kepler.rs  lib.rs
crates/pleiades-houses/: Cargo.toml  README.md
crates/pleiades-houses/src/: error.rs  houses.rs  lib.rs  thresholds.rs
crates/pleiades-jpl/: Cargo.toml  README.md
crates/pleiades-jpl/data/: independent_holdout_snapshot.csv  j2000_snapshot.csv  reference_snapshot.csv
crates/pleiades-jpl/src/: backend.rs  corpus.rs  lib.rs  production_generation.rs  reference_summary.rs  requests.rs  selected_asteroid_2001.rs  selected_asteroid_2378498.rs  snapshot.rs  test_support.rs  tests.rs
crates/pleiades-jpl/tests/: corpus_regen.rs  holdout_velocity_regen.rs  horizons_live.rs  ingest_end_to_end.rs  spk_full_kernel.rs
crates/pleiades-time/: Cargo.toml  README.md
crates/pleiades-time/data/: delta-t-observed.csv  leap-seconds.csv
crates/pleiades-time/src/: calendar.rs  calendar_test.rs  convert.rs  deltat.rs  error.rs  leap.rs  lib.rs  policy.rs  sidereal.rs  tdb.rs
crates/pleiades-time/tests/: corpus_crosscheck.rs
crates/pleiades-types/: Cargo.toml  README.md
crates/pleiades-types/src/: angles.rs  ayanamsa.rs  bodies.rs  compatibility_claim.rs  coordinates.rs  custom_bodies.rs  frames.rs  house_systems.rs  lib.rs  motion.rs  observer.rs  tests.rs  time.rs  time_range.rs  zodiac.rs
crates/pleiades-validate/: Cargo.toml
crates/pleiades-validate/data/: apparent-goldens.csv  equatorial-goldens.csv  topocentric-goldens.csv
crates/pleiades-validate/scripts/: regen-apparent-goldens.sh  regen-equatorial-goldens.sh
crates/pleiades-validate/src/: angles_validation.rs  apparent_validation.rs  artifact.rs  ayanamsa_validation.rs  chart_benchmark.rs  crossings_validation.rs  eclipse_local_thresholds.rs  eclipse_local_validation.rs  eclipse_validation.rs  equatorial_validation.rs  fictitious_thresholds.rs  fictitious_validation.rs  frame_consistency_validation.rs  house_validation.rs  lib.rs  lilith_validation.rs  main.rs  nod_aps_thresholds.rs  nod_aps_validation.rs  occult_thresholds.rs  occult_validation.rs  pheno_thresholds.rs  pheno_validation.rs  provenance.rs  report.rs  rise_trans_thresholds.rs  rise_trans_validation.rs  tests.rs  topocentric_validation.rs
crates/pleiades-validate/tests/: comparison_audit_summary.rs  occult_graze_diagnosis.rs
crates/pleiades-vsop87/: Cargo.toml  README.md
crates/pleiades-vsop87/src/: backend.rs  elements.rs  lib.rs  profiles.rs  source_docs.rs  tests.rs  transforms.rs  vsop87b_earth.rs  vsop87b_jupiter.rs  vsop87b_mars.rs  vsop87b_mercury.rs  vsop87b_neptune.rs  vsop87b_saturn.rs  vsop87b_uranus.rs  vsop87b_venus.rs
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/corpus/ingest_corpus/: horizons_api.json  unrecognized.txt  vector_table.txt
fuzz/corpus/spk_kernel/: big_endian_marker.bsp  header_and_summary.bsp  truncated_file_record.bsp  valid_two_segment.bsp
fuzz/fuzz_targets/: compression_framing.rs  compression_payload.rs  ingest_corpus.rs  spk_kernel.rs
tools/se-eclipse-local-reference/: Cargo.toml  LICENSE-NOTES.md
tools/se-eclipse-local-reference/src/: main.rs
(+620 files in other folders)
