[workspace]
members = [
    "crates/pleiades-apparent",
    "crates/pleiades-ayanamsa",
    "crates/pleiades-backend",
    "crates/pleiades-cli",
    "crates/pleiades-compression",
    "crates/pleiades-core",
    "crates/pleiades-data",
    "crates/pleiades-eclipse",
    "crates/pleiades-elp",
    "crates/pleiades-houses",
    "crates/pleiades-jpl",
    "crates/pleiades-time",
    "crates/pleiades-types",
    "crates/pleiades-validate",
    "crates/pleiades-vsop87",
]
exclude = ["tools/se-house-reference", "tools/se-ayanamsa-reference"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.0"
rust-version = "1.96.0"
repository = "https://github.com/rahulmutt/pleiades"
homepage = "https://github.com/rahulmutt/pleiades"
keywords = ["astrology", "astronomy", "ephemeris"]
categories = ["science"]

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }
# Pure-Rust HTTPS for the optional, default-off `horizons-fetch` path: ureq over
# rustls with the graviola crypto provider (no `ring`/`aws-lc-rs`, so no C
# compiler or native build dependency is ever compiled). `rustls-no-provider`
# deliberately omits ureq's bundled `ring` provider; `rustls-webpki-roots`
# supplies Mozilla trust anchors (pure data).
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-graviola = { version = "0.3", default-features = false }
pleiades-apparent = { path = "crates/pleiades-apparent", version = "0.2.0" }
pleiades-ayanamsa = { path = "crates/pleiades-ayanamsa", version = "0.2.0" }
pleiades-backend = { path = "crates/pleiades-backend", version = "0.2.0" }
pleiades-compression = { path = "crates/pleiades-compression", version = "0.2.0" }
pleiades-core = { path = "crates/pleiades-core", version = "0.2.0" }
pleiades-data = { path = "crates/pleiades-data", version = "0.2.0" }
pleiades-eclipse = { path = "crates/pleiades-eclipse", version = "0.2.0" }
pleiades-elp = { path = "crates/pleiades-elp", version = "0.2.0" }
pleiades-houses = { path = "crates/pleiades-houses", version = "0.2.0" }
pleiades-jpl = { path = "crates/pleiades-jpl", version = "0.2.0" }
pleiades-time = { path = "crates/pleiades-time", version = "0.2.0" }
pleiades-types = { path = "crates/pleiades-types", version = "0.2.0" }
pleiades-vsop87 = { path = "crates/pleiades-vsop87", version = "0.2.0" }

# Optimize test and dev builds. The packaged-artifact fit/regeneration and
# corpus comparison tests are numerically heavy; at opt-level = 0 they dominate
# the suite (pleiades-data lib measured 214s debug vs 76s at opt-level = 2).
# One-time cost: ~30s extra cold compile; incremental rebuilds slightly slower.
[profile.test]
opt-level = 2

[profile.dev]
opt-level = 2
