[package]
name = "pleiades-apparent"
description = "Apparent-place corrections for the pleiades astrology workspace: light-time, precession-to-date, annual aberration, and nutation-in-longitude with typed provenance."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
serde = ["dep:serde", "pleiades-types/serde"]

[dependencies]
pleiades-types = { workspace = true }
pleiades-time = { workspace = true }
serde = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
