[package]
name = "pleiades-apsides"
description = "Osculating lunar apsides (true apogee/perigee) for the pleiades astrology workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
