[package]
name = "pleiades-ayanamsa"
description = "Ayanamsa catalog, aliases, reference offset metadata, and sidereal offset helpers for the pleiades astrology workspace."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
pleiades-types = { workspace = true }
