[package]
name = "pleiades-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pleiades-core = { path = "../pleiades-core" }
pleiades-elp = { path = "../pleiades-elp" }
pleiades-vsop87 = { path = "../pleiades-vsop87" }
