[package]
name = "pleiades-compression"
description = "Compressed ephemeris artifact data structures and codec helpers for the pleiades astrology workspace."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
serde = ["dep:serde", "pleiades-types/serde"]

[dependencies]
pleiades-types = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
