[package]
name = "pleiades-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pleiades-backend = { path = "../pleiades-backend" }
pleiades-types = { path = "../pleiades-types" }
pleiades-houses = { path = "../pleiades-houses" }
pleiades-ayanamsa = { path = "../pleiades-ayanamsa" }
pleiades-compression = { path = "../pleiades-compression" }
