[package]
name = "pleiades-core"
description = "High-level chart facade, request validation, and compatibility profiles for the pleiades astrology workspace."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
pleiades-backend = { workspace = true }
pleiades-types = { workspace = true }
pleiades-houses = { workspace = true }
pleiades-ayanamsa = { workspace = true }
pleiades-compression = { workspace = true }
pleiades-time = { workspace = true }
pleiades-apparent = { workspace = true }

[dev-dependencies]
pleiades-data = { path = "../pleiades-data" }
