[package]
name = "pleiades-data"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[features]
packaged-artifact-path = []

[dependencies]
pleiades-backend = { path = "../pleiades-backend" }
pleiades-compression = { path = "../pleiades-compression" }
pleiades-jpl = { path = "../pleiades-jpl" }
