[package]
name = "pleiades-data"
description = "Packaged offline ephemeris data (precomputed Sun and Moon positions, derived from JPL public-domain ephemerides) and its EphemerisBackend for the pleiades astrology workspace."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
packaged-artifact-path = []

[dependencies]
pleiades-apsides = { workspace = true }
pleiades-backend = { workspace = true }
pleiades-compression = { workspace = true }
pleiades-jpl = { workspace = true }

[package.metadata.docs.rs]
all-features = true
