[package]
name = "pleiades-jpl"
description = "Checked-in JPL Horizons reference snapshots and snapshot-backed validation helpers for the pleiades astrology workspace."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
pleiades-backend = { workspace = true }
pleiades-types = { workspace = true }
ureq = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-graviola = { workspace = true, optional = true }

[features]
horizons-fetch = ["dep:ureq", "dep:rustls", "dep:rustls-graviola"]
