[package]
name = "pleiades-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pleiades-core = { path = "../pleiades-core" }
pleiades-elp = { path = "../pleiades-elp" }
pleiades-jpl = { path = "../pleiades-jpl" }
pleiades-vsop87 = { path = "../pleiades-vsop87" }
