[package]
name = "pleiades-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pleiades-ayanamsa = { path = "../pleiades-ayanamsa" }
pleiades-compression = { path = "../pleiades-compression" }
pleiades-core = { path = "../pleiades-core" }
pleiades-data = { path = "../pleiades-data" }
pleiades-elp = { path = "../pleiades-elp" }
pleiades-houses = { path = "../pleiades-houses" }
pleiades-jpl = { path = "../pleiades-jpl" }
pleiades-vsop87 = { path = "../pleiades-vsop87" }
