[package]
name = "pleiades-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pleiades-eclipse = { workspace = true }
pleiades-events = { workspace = true }
pleiades-apparent = { workspace = true }
pleiades-ayanamsa = { path = "../pleiades-ayanamsa" }
pleiades-backend = { path = "../pleiades-backend" }
pleiades-compression = { path = "../pleiades-compression" }
pleiades-core = { path = "../pleiades-core" }
pleiades-data = { path = "../pleiades-data" }
pleiades-elp = { path = "../pleiades-elp" }
pleiades-fict = { workspace = true }
pleiades-houses = { path = "../pleiades-houses" }
pleiades-jpl = { path = "../pleiades-jpl" }
pleiades-types = { workspace = true }
pleiades-vsop87 = { path = "../pleiades-vsop87" }
