[package]
name = "se-eclipse-local-reference"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone: this tool is excluded from the root workspace, but when built
# from inside a git worktree nested under the repo root, cargo walks up and
# finds the root Cargo.toml (whose `exclude` lists the canonical tool paths, not
# the nested worktree path), causing a "believes it's in a workspace when it's
# not" error. An empty [workspace] table makes this package its own workspace
# root and resolves that unconditionally (see se-rise-trans-reference).
[workspace]

[dependencies]
swisseph = "0.1.1"
libswisseph-sys = "0.1.2"
